@@ -1,0 +1,7 @@
+/* Machine description file for SuperH. */
+
+#ifdef __BIG_ENDIAN__
+# define WORDS_BIG_ENDIAN
+#endif
+
+#define NO_ARG_ARRAY
