@@ -1,3 +1,7 @@
+2008-10-18  Ulrich Mueller  <ulm@gentoo.org>
+
+	* MACHINES: Add section for SuperH.
+
 2008-10-12  Carsten Dominik  <dominik@science.uva.nl>
 
 	* refcards/orgcard.tex: Add description for attachments, plus
